# smart-sensor

./: Cargo.toml  before.txt  build.rs  cfg.toml.example
.cargo/: config.toml
examples/: dhcp.rs
src/: main.rs  mqtt.rs  networking.rs
