[package]
name = "raum-sensor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3

[dependencies]
embedded-hal = "0.2.3"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }
esp32-hal = { version = "0.7.0",features = [ "rt" ] }
xtensa-lx-rt = { version = "0.14.0", optional = true }
xtensa-lx = { version = "0.7.0", optional = true }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = ["esp32", "embedded-svc","wifi"] }
smoltcp = { version = "0.8.2", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
critical-section = "1.1.1"
atomic-polyfill = "1.0.1"
log = "0.4.17"
embedded-svc = { version = "0.23.1", default-features = false, features = []}
enumset = { version = "1", default-features = false, optional = true }
linked_list_allocator = { version = "0.10.3", default-features = false, features = ["const_mut_refs"] }
embedded-io = "0.3.1"
fugit = "0.3.6"
heapless = { version = "0.7.14", default-features = false }
toml-cfg = "0.1"
esp-println = { version = "0.3.1", features = [ "esp32", "log" ] }
gmqtt = "0.1.1"
esp-backtrace = { version = "0.4.0", features = [ "esp32", "panic-handler", "exception-handler", "print-uart" ] }
bme280-multibus = {version="0.2.2"}


[dev-dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps" }
bleps-macros = { git = "https://github.com/bjoernQ/bleps", package = "bleps-macros" }


[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
